--- a/springboot/MemberProject1/src/main/resources/application.yml
+++ b/springboot/MemberProject1/src/main/resources/application.yml
@@ -1,2 +1,18 @@
+#
 server:
   port: 8091
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springbootclass?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: bootuser
+    password: 1234
+
+
+#JPA 관련 설정
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    hibernate:
+      ddl-auto: create
